tests/NormalTests/paczka1/small_fuzzy/46176760.err
Error in line 5: zUrU9ioHgG A755 5,6
Error in line 9: zUrU9ioHgG S543 49,3
